# lamcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: build.yml  release.yml
grasshopper/Lamcp_Bridge/: code.py  metadata.json
lamcp/: server.py
