[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lamcp"
version = "0.1.0"
description = "Lambda MCP: teach your LLM to do Grasshopper tricks."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Gramazio Kohler Research, ETH Zürich" }]
license = { file = "LICENSE" }
keywords = ["mcp", "rhino", "grasshopper", "claude", "llm", "bridge"]
dependencies = [
    "fastmcp>=0.4",
    "httpx>=0.27",
]

[project.scripts]
lamcp = "lamcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["lamcp"]
