[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lamcp"
version = "0.6.0"
description = "Lambda MCP: teach your LLM to do Grasshopper tricks."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Gramazio Kohler Research, ETH Zürich" }]
license = { file = "LICENSE" }
keywords = ["mcp", "rhino", "grasshopper", "claude", "llm", "bridge"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=0.4",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
]

[project.scripts]
lamcp = "lamcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["lamcp"]
